--- a/TDDFeed.xcodeproj/xcshareddata/xcschemes/TDDFeed.xcscheme
+++ b/TDDFeed.xcodeproj/xcshareddata/xcschemes/TDDFeed.xcscheme
@@ -29,7 +29,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E1284E3822F6531B00941042"
