Enable code coverage

--- a/TDDFeed.xcodeproj/xcshareddata/xcschemes/TDDFeed.xcscheme
+++ b/TDDFeed.xcodeproj/xcshareddata/xcschemes/TDDFeed.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E1284E2F22F6531B00941042"
+            BuildableName = "TDDFeed.framework"
+            BlueprintName = "TDDFeed"
+            ReferencedContainer = "container:TDDFeed.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO"
