--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 os: osx
-osx_image: xcode10.1
+osx_image: xcode10.2.1
 language: swift
-script: xcodebuild clean build test -project TDDFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+script: xcodebuild clean build test -project TDDFeed/TDDFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
